--- a/404.html
+++ b/404.html
@@ -1,15 +1,13 @@
 ---
 layout: default
-title: The Sheep Vote
-header_background_image: https://source.unsplash.com/0U_gjae2TKo/1880x1240?a=.png
+title: Page Not Found
 permalink: /404.html
 ---
-<header style="background-image: url({% include relative-src.html src=page.header_background_image %});">
-	<div class="container">
-		<h1 class="editable">Page Not found</h1>
-		<p class="editable">You've lost your way just like the millions of sheep without a voice</p>
-		<div class="button">
-			<a href="/">Return home</a>
-		</div>
-	</div>
-</header>
+<div class="darker">
+  <div class="container">
+    <h1>404 - Page Not found</h1>
+    <div class="button" style="text-align: center">
+      <a href="/">Return home</a>
+    </div>
+  </div>
+</div>
