--- a/index.html
+++ b/index.html
@@ -46,5 +46,6 @@ title: Home
 
 <div class="darker">
   <div class="js-map map"></div>
-  <script async defer src="https://maps.googleapis.com/maps/api/js?key={{ site.google_maps_api }}&callback=initMap"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCwjMTvYovjGRsvcIn6TSyZak5yxEJmgJ8&callback=initMap"
+    async defer></script>
 </div>
