--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ title: Home
       Portanto, fique de olho nas redes sociais para saber onde é o evento de comunidade mais próximo e no dia 20 finalizamos com uma grande festa!
     </p>
 		<div class="button" style="text-align: center">
-      <a href="#meetup">Hacktoberfest Open Hack Fest</a>
+      <a href="https://t.me/joinchat/HQjUPA_9lj_PuEn7Oqu2iw">Junte-se a comunidade!</a>
     </div>
 	</div>
 </div>
