Includes schedule section

--- a/index.html
+++ b/index.html
@@ -33,12 +33,26 @@ title: Home
 
 <div class="darker">
 	<div class="container">
-		<h2 class="editable">Junte-se a nós</h2>
-    <p class="editable" style="text-align: center;">
-      Estamos organizando inúmeros meetups com as comunidades para ajudar as pessoas a iniciarem suas contribuições em projetos open sources.<br>
-      Portanto, fique de olho nas redes sociais para saber onde é o evento de comunidade mais próximo e no dia 20 finalizamos com uma grande festa!
-    </p>
-		<div class="button" style="text-align: center">
+		<h2>Agenda</h2>
+		<p>Estamos organizando meetups com as comunidades para ajudar as pessoas a iniciarem suas contribuições em projetos open sources. Veja os eventos perto de você!</p>
+		
+		<ul class="events">
+			<li>
+				<h3>Go Releaser: lessons learned</h3>
+				<h1>10/10</h1>
+				<p class="center">14:00</p>
+				<a href="https://goo.gl/maps/HDCmDdu4gpH2">Softville</a>
+			</li>
+			
+			<li>
+				<h3>Evento principal</h3>
+				<h1>20/10</h1>
+				<p class="center">10:00</p>
+				<a href="https://goo.gl/maps/HDCmDdu4gpH2">Softville</a>
+			</li>
+		</ul>
+
+		<div class="button center">
       <a href="https://t.me/joinchat/HQjUPA_9lj_PuEn7Oqu2iw">Junte-se a comunidade!</a>
     </div>
 	</div>
