--- a/index.html
+++ b/index.html
@@ -38,17 +38,24 @@ title: Home
 		
 		<ul class="events">
 			<li>
-				<h3>Go Releaser: lessons learned</h3>
-				<h1>10/10</h1>
-				<p class="center">14:00</p>
+				<h3>Hacktoberfest</h3>
+				<h1>20/10</h1>
+				<p class="center">10:00 às 18:00</p>
+				<a href="https://goo.gl/maps/HDCmDdu4gpH2">Fab Lab Softville</a>
+			</li>
+			
+			<li>
+				<h3>GoReleaser: lessons learned</h3>
+				<h1>20/10</h1>
+				<p class="center">A definir</p>
 				<a href="https://goo.gl/maps/HDCmDdu4gpH2">Softville</a>
 			</li>
 			
 			<li>
-				<h3>Evento principal</h3>
+				<h3>Python e Django</h3>
 				<h1>20/10</h1>
-				<p class="center">10:00</p>
-				<a href="https://goo.gl/maps/HDCmDdu4gpH2">Softville</a>
+				<p class="center">A definir</p>
+				<a href="https://goo.gl/maps/HDCmDdu4gpH2">Fab Lab Softville</a>
 			</li>
 		</ul>
 
