--- a/index.html
+++ b/index.html
@@ -41,21 +41,21 @@ title: Home
 				<h3>Hacktoberfest</h3>
 				<h1>20/10</h1>
 				<p class="center">10:00 às 18:00</p>
-				<a href="https://goo.gl/maps/HDCmDdu4gpH2">Fab Lab Softville</a>
+				<a href="https://goo.gl/maps/HDCmDdu4gpH2">Fab Lab</a>
 			</li>
 			
 			<li>
 				<h3>GoReleaser: lessons learned</h3>
 				<h1>20/10</h1>
 				<p class="center">A definir</p>
-				<a href="https://goo.gl/maps/HDCmDdu4gpH2">Softville</a>
+				<a href="https://goo.gl/maps/HDCmDdu4gpH2">Fab Lab</a>
 			</li>
 			
 			<li>
 				<h3>Python e Django</h3>
 				<h1>20/10</h1>
 				<p class="center">A definir</p>
-				<a href="https://goo.gl/maps/HDCmDdu4gpH2">Fab Lab Softville</a>
+				<a href="https://goo.gl/maps/HDCmDdu4gpH2">Fab Lab</a>
 			</li>
 		</ul>
 
