Updates events list

--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@ title: Home
 				<p class="center">A definir</p>
 				<a href="https://goo.gl/maps/HDCmDdu4gpH2">Fab Lab</a>
 			</li>
-			
+
 			<li>
-				<h3>Python e Django</h3>
+				<h3>Docker for developers</h3>
 				<h1>20/10</h1>
-				<p class="center">A definir</p>
+				<p class="center">11:00 às 11:30</p>
 				<a href="https://goo.gl/maps/HDCmDdu4gpH2">Fab Lab</a>
 			</li>
 		</ul>
