--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ title: Home
 	<div class="container">
 		<h2>Agenda</h2>
 		<p>Estamos organizando meetups com as comunidades para ajudar as pessoas a iniciarem suas contribuições em projetos open sources. Veja os eventos perto de você!</p>
-		
+
 		<ul class="events">
 			<li>
 				<h3>Hacktoberfest</h3>
@@ -43,18 +43,28 @@ title: Home
 				<p class="center">10:00 às 18:00</p>
 				<a href="https://goo.gl/maps/HDCmDdu4gpH2">Fab Lab</a>
 			</li>
-			
+
 			<li>
 				<h3>GoReleaser: lessons learned</h3>
+				<p class="center">por Carlos Becker</p>
 				<h1>20/10</h1>
-				<p class="center">A definir</p>
+				<p class="center">14:00 às 14:30</p>
 				<a href="https://goo.gl/maps/HDCmDdu4gpH2">Fab Lab</a>
 			</li>
 
 			<li>
 				<h3>Docker for developers</h3>
+				<p class="center">por Paulo Cuchi</p>
 				<h1>20/10</h1>
 				<p class="center">11:00 às 11:30</p>
+				<a href="https://goo.gl/maps/HDCmDdu4gpH2">Fab Lab</a>
+			</li>
+
+			<li>
+				<h3>Blockchain</h3>
+				<p class="center">por Lauro Gripa</p>
+				<h1>20/10</h1>
+				<p class="center">14:30 às 15:00</p>
 				<a href="https://goo.gl/maps/HDCmDdu4gpH2">Fab Lab</a>
 			</li>
 		</ul>
@@ -70,3 +80,10 @@ title: Home
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA74FDHJIx6cPBamNedRsespE4otEmXh7A&callback=initMap"
     async defer></script>
 </div>
+
+<!--
+<div class="darker">
+	<div class=""
+  <h2>Patrocinadores</h2>
+</div>
+ -->
