Add sponsors section

--- a/index.html
+++ b/index.html
@@ -81,9 +81,12 @@ title: Home
     async defer></script>
 </div>
 
-<!--
-<div class="darker">
-	<div class=""
-  <h2>Patrocinadores</h2>
+
+<div class="orange">
+	<div class="center sponsors">
+	  <h2>Patrocínio</h2>
+		<img src="/images/conta_azul.png" alt="Conta Azul">
+		<img src="/images/mlabs.png" alt="Magrathea Labs">
+	</div>
 </div>
- -->
+
