--- a/index.html
+++ b/index.html
@@ -2,91 +2,108 @@
 layout: default
 title: Home
 ---
+
 <div class="container">
-	<h2 class="editable">O que é a hacktoberfest?</h2>
-  <p class="editable">A hacktoberfest é uma celebração criada pela DigitalOcean com parceria com o GitHub e Twilio para comemorar o open source
-    e a comunidade durante o mês de Outubro.
-    Nós acreditamos que Joinville pode participar e contribuir com essa iniciativa e por isso queremos fazer um evento para
-    unir as comunidades de software, empresas de tecnologias e faculdades da cidade para um dia de comemoração e muitas contribuições!</p>
+  <h2 class="editable">O que é a hacktoberfest?</h2>
+  <p class="editable">
+    A hacktoberfest é uma celebração criada pela DigitalOcean com parceria com o
+    GitHub e Twilio para comemorar o open source e a comunidade durante o mês de
+    Outubro. Nós acreditamos que Joinville pode participar e contribuir com essa
+    iniciativa e por isso queremos fazer um evento para unir as comunidades de
+    software, empresas de tecnologias e faculdades da cidade para um dia de
+    comemoração e muitas contribuições!
+  </p>
 
   <ul class="thirds">
-		<li>
-			<div class="image">{% octicon organization height:40 width:40 %}</div>
-			<h3 class="editable">Quem</h3>
-			<p class="editable">O evento é aberto para todo mundo, iniciantes ou pessoas com mais experiências</p>
-		</li>
+    <li>
+      <div class="image">{% octicon organization height:40 width:40 %}</div>
+      <h3 class="editable">Quem</h3>
+      <p class="editable">
+        O evento é aberto para todo mundo, iniciantes ou pessoas com mais
+        experiências
+      </p>
+    </li>
 
-		<li>
-			<div class="image">{% octicon location height:40 width:40 %}</div>
-			<h3 class="editable">Onde</h3>
-			<p class="editable">O evento ocorerrá na Softville. Rua Otto Boehm, 48 - América
-        Joinville, SC, 89201-700.</p>
-		</li>
+    <li>
+      <div class="image">{% octicon location height:40 width:40 %}</div>
+      <h3 class="editable">Onde</h3>
+      <p class="editable">
+        O evento ocorerrá na Softville. Rua Otto Boehm, 48 - América Joinville,
+        SC, 89201-700.
+      </p>
+    </li>
 
-		<li>
-			<div class="image">{% octicon calendar height:40 width:40 %}</div>
-			<h3 class="editable">Quando</h3>
-			<p class="editable">Dia 20/10/2018 das 10h às 18h</p>
-		</li>
-	</ul>
+    <li>
+      <div class="image">{% octicon calendar height:40 width:40 %}</div>
+      <h3 class="editable">Quando</h3>
+      <p class="editable">Dia 20/10/2018 das 10h às 18h</p>
+    </li>
+  </ul>
 </div>
 
 <div class="darker">
-	<div class="container">
-		<h2>Agenda</h2>
-		<p>Estamos organizando meetups com as comunidades para ajudar as pessoas a iniciarem suas contribuições em projetos open sources. Veja os eventos perto de você!</p>
+  <div class="container">
+    <h2>Agenda</h2>
+    <p>
+      Estamos organizando meetups com as comunidades para ajudar as pessoas a
+      iniciarem suas contribuições em projetos open sources. Veja os eventos
+      perto de você!
+    </p>
 
-		<ul class="events">
-			<li>
-				<h3>Hacktoberfest</h3>
-				<h1>20/10</h1>
-				<p class="center">10:00 às 18:00</p>
-				<a href="https://goo.gl/maps/HDCmDdu4gpH2">Fab Lab</a>
-			</li>
+    <ul class="events">
+      <li>
+        <h3>Hacktoberfest</h3>
+        <h1>20/10</h1>
+        <p class="center">10:00 às 18:00</p>
+        <a href="https://goo.gl/maps/HDCmDdu4gpH2">Fab Lab</a>
+      </li>
 
-			<li>
-				<h3>Docker for developers</h3>
-				<p class="center">por Paulo Cuchi</p>
-				<h1>20/10</h1>
-				<p class="center">11:00 às 11:30</p>
-				<a href="https://goo.gl/maps/HDCmDdu4gpH2">Fab Lab</a>
-			</li>
+      <li>
+        <h3>Docker for developers</h3>
+        <p class="center">por Paulo Cuchi</p>
+        <h1>20/10</h1>
+        <p class="center">11:00 às 11:30</p>
+        <a href="https://goo.gl/maps/HDCmDdu4gpH2">Fab Lab</a>
+      </li>
 
-			<li>
-				<h3>GoReleaser: lessons learned</h3>
-				<p class="center">por Carlos Becker</p>
-				<h1>20/10</h1>
-				<p class="center">14:00 às 14:30</p>
-				<a href="https://goo.gl/maps/HDCmDdu4gpH2">Fab Lab</a>
-			</li>
+      <li>
+        <h3>GoReleaser: lessons learned</h3>
+        <p class="center">por Carlos Becker</p>
+        <h1>20/10</h1>
+        <p class="center">14:00 às 14:30</p>
+        <a href="https://goo.gl/maps/HDCmDdu4gpH2">Fab Lab</a>
+      </li>
 
-			<li>
-				<h3>Blockchain</h3>
-				<p class="center">por Lauro Gripa</p>
-				<h1>20/10</h1>
-				<p class="center">14:30 às 15:00</p>
-				<a href="https://goo.gl/maps/HDCmDdu4gpH2">Fab Lab</a>
-			</li>
-		</ul>
+      <li>
+        <h3>Blockchain</h3>
+        <p class="center">por Lauro Gripa</p>
+        <h1>20/10</h1>
+        <p class="center">14:30 às 15:00</p>
+        <a href="https://goo.gl/maps/HDCmDdu4gpH2">Fab Lab</a>
+      </li>
+    </ul>
 
-		<div class="button center">
-      <a href="https://t.me/joinchat/HQjUPA_9lj_PuEn7Oqu2iw">Junte-se a comunidade!</a>
+    <div class="button center">
+      <a href="https://t.me/joinchat/HQjUPA_9lj_PuEn7Oqu2iw"
+        >Junte-se a comunidade!</a
+      >
     </div>
-	</div>
+  </div>
 </div>
 
 <div class="darker">
   <div class="js-map map"></div>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA74FDHJIx6cPBamNedRsespE4otEmXh7A&callback=initMap"
-    async defer></script>
+  <script
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA74FDHJIx6cPBamNedRsespE4otEmXh7A&callback=initMap"
+    async
+    defer
+  ></script>
 </div>
-
 
 <div class="orange">
-	<div class="center sponsors">
-	  <h2>Patrocínio</h2>
-		<img src="/images/conta_azul.png" alt="Conta Azul">
-		<img src="/images/mlabs.png" alt="Magrathea Labs">
-	</div>
+  <div class="center sponsors">
+    <h2>Patrocínio</h2>
+    <img src="/images/conta_azul.png" alt="Conta Azul" />
+    <img src="/images/mlabs.png" alt="Magrathea Labs" />
+  </div>
 </div>
-
