--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ title: Home
   </ul>
 </div>
 
-<div class="darker">
+<div class="dark-blue">
   <div class="container">
     <h2>Agenda</h2>
     <p>
@@ -76,7 +76,7 @@ title: Home
   ></script>
 </div>
 
-<div class="orange">
+<div class="dark-blue">
   <div class="center sponsors">
     <h2>Patrocínio</h2>
     <!-- <img src="/images/mlabs.png" alt="Magrathea Labs" /> -->
