Inserido a mesma logo do HF da DigitalOcean

--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@ title: Home
   ></script>
 </div>
 
-<div class="dark-blue">
+<!-- <div class="dark-blue">
   <div class="center sponsors">
     <h2>Patrocínio</h2>
-    <!-- <img src="/images/mlabs.png" alt="Magrathea Labs" /> -->
+    <img src="/images/mlabs.png" alt="Magrathea Labs" />
   </div>
-</div>
+</div> -->
