--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>2019-edition</title>
+    <title>Hacktoberfest Joinville</title>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but 2019-edition doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>O Hacktoberfest Joinville não funciona muito bem com o JavaScript desabilitado, para uma melhor experiência habilite ele.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
