:mag: Added Open Graph and Twitter meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,44 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
+
+    <!-- Metas -->
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+
+    <!-- SEO -->
     <title>Hacktoberfest Joinville</title>
+    <meta
+      name="description"
+      content="Chegou o Hacktoberfest 2019! Vamos celebrar o open source com muita comida, bebida, aprendizado e ótimas companhias!"
+    />
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Hacktoberfest - Joinville - 2019" />
+    <meta
+      property="og:description"
+      content="Chegou o Hacktoberfest 2019! Vamos celebrar o open source com muita comida, bebida, aprendizado e ótimas companhias!"
+    />
+    <meta property="og:url" content="https://hacktoberfest.joinville.br" />
+
+    <!-- Twitter cards -->
+    <meta name="twitter:card" content="sumary_large_image" />
+    <meta name="twitter:title" content="Hacktoberfest - Joinville - 2019" />
+    <meta
+      name="twitter:description"
+      content="Chegou o Hacktoberfest 2019! Vamos celebrar o open source com muita comida, bebida, aprendizado e ótimas companhias!"
+    />
+    <meta name="twitter:url" content="https://hacktoberfest.joinville.br" />
   </head>
   <body>
     <noscript>
-      <strong>O Hacktoberfest Joinville não funciona muito bem com o JavaScript desabilitado, para uma melhor experiência habilite ele.</strong>
+      <strong
+        >O Hacktoberfest Joinville não funciona muito bem com o JavaScript
+        desabilitado, para uma melhor experiência habilite ele.</strong
+      >
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
