:mag: Added new favicon and apple touch icon

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,17 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
   <head>
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="<%= BASE_URL %>apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      href="<%= BASE_URL %>favicon.png"
+      type="image/png"
+    />
 
     <!-- Metas -->
     <meta charset="utf-8" />
@@ -23,6 +33,7 @@
       content="Chegou o Hacktoberfest 2019! Vamos celebrar o open source com muita comida, bebida, aprendizado e ótimas companhias!"
     />
     <meta property="og:url" content="https://hacktoberfest.joinville.br" />
+    <meta property="og:image" content="<%= BASE_URL %>images/open-graph.jpg" />
 
     <!-- Twitter cards -->
     <meta name="twitter:card" content="sumary_large_image" />
@@ -32,6 +43,7 @@
       content="Chegou o Hacktoberfest 2019! Vamos celebrar o open source com muita comida, bebida, aprendizado e ótimas companhias!"
     />
     <meta name="twitter:url" content="https://hacktoberfest.joinville.br" />
+    <meta name="twitter:card" content="<%= BASE_URL %>images/open-graph.jpg" />
   </head>
   <body>
     <noscript>
