:mag: Added open graph and twitter image

--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
       content="Chegou o Hacktoberfest 2019! Vamos celebrar o open source com muita comida, bebida, aprendizado e ótimas companhias!"
     />
     <meta property="og:url" content="https://hacktoberfest.joinville.br" />
-    <meta property="og:image" content="<%= BASE_URL %>images/open-graph.jpg" />
+    <meta property="og:image" content="<%= BASE_URL %>open-graph.png" />
 
     <!-- Twitter cards -->
     <meta name="twitter:card" content="sumary_large_image" />
@@ -43,7 +43,7 @@
       content="Chegou o Hacktoberfest 2019! Vamos celebrar o open source com muita comida, bebida, aprendizado e ótimas companhias!"
     />
     <meta name="twitter:url" content="https://hacktoberfest.joinville.br" />
-    <meta name="twitter:card" content="<%= BASE_URL %>images/open-graph.jpg" />
+    <meta name="twitter:card" content="<%= BASE_URL %>open-graph.png" />
   </head>
   <body>
     <noscript>
