:bento: Updated favicon

--- a/public/index.html
+++ b/public/index.html
@@ -2,15 +2,9 @@
 <html lang="pt-BR">
   <head>
     <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="<%= BASE_URL %>apple-touch-icon.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
+      rel="shortcut icon"
+      type="image/x-icon"
       href="<%= BASE_URL %>favicon.png"
-      type="image/png"
     />
 
     <!-- Metas -->
@@ -33,7 +27,10 @@
       content="Chegou o Hacktoberfest 2019! Vamos celebrar o open source com muita comida, bebida, aprendizado e ótimas companhias!"
     />
     <meta property="og:url" content="https://hacktoberfest.joinville.br" />
-    <meta property="og:image" content="https://hacktoberfest.joinville.br/open-graph.png" />
+    <meta
+      property="og:image"
+      content="https://hacktoberfest.joinville.br/open-graph.png"
+    />
 
     <!-- Twitter cards -->
     <meta name="twitter:card" content="sumary_large_image" />
@@ -43,7 +40,10 @@
       content="Chegou o Hacktoberfest 2019! Vamos celebrar o open source com muita comida, bebida, aprendizado e ótimas companhias!"
     />
     <meta name="twitter:url" content="https://hacktoberfest.joinville.br" />
-    <meta name="twitter:card" content="https://hacktoberfest.joinville.br/open-graph.png" />
+    <meta
+      name="twitter:card"
+      content="https://hacktoberfest.joinville.br/open-graph.png"
+    />
   </head>
   <body>
     <noscript>
